--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   bcrypt: ^1.1.3
   equatable: ^2.0.5
   provider: ^6.1.2
+  http: ^0.13.3
 
 dev_dependencies:
   flutter_native_splash: ^2.4.0
